--- a/Phenophase_Classification/data_preprocessing.ipynb
+++ b/Phenophase_Classification/data_preprocessing.ipynb
@@ -31,6 +31,29 @@
     "#\n",
     "# This is where the code for the processing of data and the creation of the dataset for phenophase classification will reside."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# delete all .tif files in this data directory\n",
+    "directory = \"./data/\"\n",
+    "\n",
+    "files_in_directory = os.listdir(directory)\n",
+    "filtered_files = [file for file in files_in_directory if file.endswith(\".tif\")]\n",
+    "for file in filtered_files:\n",
+    "\tpath_to_file = os.path.join(directory, file)\n",
+    "\tos.remove(path_to_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
