Remove all <sitename>_meta.txt files from data directory

--- a/Phenophase_Classification/data_preprocessing.ipynb
+++ b/Phenophase_Classification/data_preprocessing.ipynb
@@ -50,6 +50,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# delete all <sitename>_meta.txt files in this data directory\n",
+    "directory = \"./data/\"\n",
+    "\n",
+    "files_in_directory = os.listdir(directory)\n",
+    "filtered_files = [file for file in files_in_directory if file.endswith(\".txt\")]\n",
+    "for file in filtered_files:\n",
+    "\tpath_to_file = os.path.join(directory, file)\n",
+    "\tos.remove(path_to_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
