Refactor phenocam data directory name

--- a/Phenophase_Classification/data_preprocessing.ipynb
+++ b/Phenophase_Classification/data_preprocessing.ipynb
@@ -39,7 +39,7 @@
    "outputs": [],
    "source": [
     "# delete all .tif files in this data directory\n",
-    "directory = \"./data/\"\n",
+    "directory = \"./phenocam_data/\"\n",
     "\n",
     "files_in_directory = os.listdir(directory)\n",
     "filtered_files = [file for file in files_in_directory if file.endswith(\".tif\")]\n",
@@ -55,7 +55,7 @@
    "outputs": [],
    "source": [
     "# delete all <sitename>_meta.txt files in this data directory\n",
-    "directory = \"./data/\"\n",
+    "directory = \"./phenocam_data/\"\n",
     "\n",
     "files_in_directory = os.listdir(directory)\n",
     "filtered_files = [file for file in files_in_directory if file.endswith(\".txt\")]\n",
@@ -71,7 +71,7 @@
    "outputs": [],
    "source": [
     "# delete all <sitename>_<veg_type>....csv files in this data directory that are not for Deciduous Broadleafs (DB)\n",
-    "directory = \"./data/\"\n",
+    "directory = \"./phenocam_data/\"\n",
     "\n",
     "files_in_directory = os.listdir(directory)\n",
     "filtered_files = [file for file in files_in_directory if file.endswith(\".csv\")]\n",
@@ -91,7 +91,7 @@
    "outputs": [],
    "source": [
     "# delete all redundant <sitename>_meta.json files\n",
-    "directory = \"./data/\"\n",
+    "directory = \"./phenocam_data/\"\n",
     "\n",
     "files_in_directory = os.listdir(directory)\n",
     "filtered_files = [file for file in files_in_directory if file.endswith(\".json\")]\n",
@@ -108,6 +108,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# delete all non 1day_transtion_dates CSV files\n",
+    "directory = \"./phenocam_data/\"\n",
+    "\n",
+    "files_in_directory = os.listdir(directory)\n",
+    "filtered_files = [file for file in files_in_directory if file.endswith(\".csv\")]\n",
+    "\n",
+    "for file in filtered_files:\n",
+    "    is_transition_dates = file.find('1day_transition_dates')\n",
+    "    if is_transition_dates == -1:\n",
+    "        path_to_file = os.path.join(directory, file)\n",
+    "        os.remove(path_to_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
@@ -115,7 +134,7 @@
     "# delete all non site type 1 files\n",
     "import json\n",
     "\n",
-    "directory = \"./data/\"\n",
+    "directory = \"./phenocam_data/\"\n",
     "\n",
     "files_in_directory = os.listdir(directory)\n",
     "filtered_files = [file for file in files_in_directory if file.endswith(\".json\")]\n",
@@ -144,7 +163,7 @@
     "# delete the following remaining sites that I will not be using\n",
     "remove_these = ['ashbottoms', 'barrocolorado', 'groundhog', 'harvardbarn', 'harvardhemlock', 'hawbeckereddy', 'huyckpreserveny', 'kingmanfarm', 'NEON.D03.JERK.DP1.00033', 'NEON.D05.TREE.DP1.00033', 'ninemileprairie', 'northattleboroma', 'proctor', 'sweetbriar', 'sylvania', 'ugseros', 'uwmfieldsta', 'woodstockvt', 'worcester']\n",
     "\n",
-    "directory = \"./data/\"\n",
+    "directory = \"./phenocam_data/\"\n",
     "files_in_directory = os.listdir(directory)\n",
     "\n",
     "for sitename in remove_these:\n",
@@ -171,7 +190,7 @@
    "source": [
     "# print all sites being used\n",
     "\n",
-    "directory = \"./data/\"\n",
+    "directory = \"./phenocam_data/\"\n",
     "\n",
     "files_in_directory = os.listdir(directory)\n",
     "filtered_files = [file for file in files_in_directory if file.endswith(\".json\")]\n",
