Finished preprocessing of PhenoCam data

--- a/Phenophase_Classification/process_phenocam_data.ipynb
+++ b/Phenophase_Classification/process_phenocam_data.ipynb
@@ -22,19 +22,17 @@
  "nbformat_minor": 2,
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# Data Preprocessing Jupyter Notebook\n",
+    "# PhenoCam Data Processing Jupyter Notebook\n",
     "#\n",
-    "# This is where the code for the processing of data and the creation of the dataset for phenophase classification will reside."
-   ]
+    "This is where the code for the processing of data and the creation of the dataset for phenophase classification will reside."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -108,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,6 +118,25 @@
     "\n",
     "for file in filtered_files:\n",
     "    is_transition_dates = file.find('1day_transition_dates')\n",
+    "    if is_transition_dates == -1:\n",
+    "        path_to_file = os.path.join(directory, file)\n",
+    "        os.remove(path_to_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# delete all non 1000 ROI transition dates CSV files\n",
+    "directory = \"./phenocam_data/\"\n",
+    "\n",
+    "files_in_directory = os.listdir(directory)\n",
+    "filtered_files = [file for file in files_in_directory if file.endswith(\".csv\")]\n",
+    "\n",
+    "for file in filtered_files:\n",
+    "    is_transition_dates = file.find('1000')\n",
     "    if is_transition_dates == -1:\n",
     "        path_to_file = os.path.join(directory, file)\n",
     "        os.remove(path_to_file)"
@@ -160,6 +177,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# remove comments at beginning of CSV files\n",
+    "import csv\n",
+    "directory = \"./phenocam_data/\"\n",
+    "\n",
+    "files_in_directory = os.listdir(directory)\n",
+    "filtered_files = [file for file in files_in_directory if file.endswith(\".csv\")]\n",
+    "\n",
+    "for file in filtered_files:\n",
+    "    path_to_file = os.path.join(directory, file)\n",
+    "    lines = list()\n",
+    "    with open(path_to_file, 'r') as readFile:\n",
+    "        reader = csv.reader(readFile)\n",
+    "        for row in reader:\n",
+    "            lines.append(row)\n",
+    "        lines = lines[16:]\n",
+    "    with open(path_to_file, 'w', newline='') as writeFile:\n",
+    "        writer = csv.writer(writeFile)\n",
+    "        writer.writerows(lines)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# delete the following remaining sites that I will not be using\n",
     "remove_these = ['ashbottoms', 'barrocolorado', 'groundhog', 'harvardbarn', 'harvardhemlock', 'hawbeckereddy', 'huyckpreserveny', 'kingmanfarm', 'NEON.D03.JERK.DP1.00033', 'NEON.D05.TREE.DP1.00033', 'ninemileprairie', 'northattleboroma', 'proctor', 'sweetbriar', 'sylvania', 'ugseros', 'uwmfieldsta', 'woodstockvt', 'worcester']\n",
     "\n",
@@ -176,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
