Initial sorting of image data

--- a/Phenophase_Classification/create_dataset.ipynb
+++ b/Phenophase_Classification/create_dataset.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,15 +98,15 @@
     "        years.append(year)\n",
     "    avg_year = int(statistics.median(years))\n",
     "    avg_doy = int(statistics.median(doys))\n",
-    "\n",
     "    _, avg_month, avg_day = doy_to_date(avg_doy, avg_year)\n",
+    "    date = str(avg_year) + '_' + str(avg_month) + '_' + str(avg_day)\n",
     "\n",
-    "    return {'year':avg_year, 'month':avg_month, 'day':avg_day, 'doy':avg_doy}\n"
+    "    return {'date':date , 'year':avg_year, 'month':avg_month, 'day':avg_day, 'doy':avg_doy}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {
     "tags": []
    },
@@ -170,29 +170,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# method, given input of date, output boolean indicating if rising or falling"
+    "# method, return true if date1 (date) after date2 (transition date)\n",
+    "def date_is_after(year1, month1, day1, year2, month2, day2):\n",
+    "    if year1 != year2:\n",
+    "        return year1 > year2\n",
+    "    elif month1 != month2:\n",
+    "        return month1 > month2\n",
+    "    elif day1 != day2:\n",
+    "        return day1 > day2\n",
+    "    else:\n",
+    "        return True\n",
+    "\n",
+    "\n",
+    "# method, given input of img_file, output boolean indicating if rising or falling\n",
+    "def is_rising(filename):\n",
+    "    sitename = ''\n",
+    "    date = ''\n",
+    "    year = 0\n",
+    "    month = 0\n",
+    "    day = 0\n",
+    "\n",
+    "    ## ****this is where I load json of transition dates and iterate through it, deciding somehow if it is rising or falling****\n",
+    "\n",
+    "\n",
+    "# sort images into \"sorted_images\" folder according to rising or falling\n",
+    "directory = \"./phenocam_data/\"\n",
+    "target_directory = '../PhenoCam_v2/sorted_images/'\n",
+    "\n",
+    "files_in_directory = os.listdir(directory)\n",
+    "filtered_files = [file for file in files_in_directory if file.endswith(\"imgs.json\")]\n",
+    "\n",
+    "for file in filtered_files:\n",
+    "    filename = ''\n",
+    "    if is_rising(file):\n",
+    "        pass # save into rising folder, with filename name (not file)\n",
+    "    else:\n",
+    "        pass # save into falling folder, with filename name (not file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# sort images into folder structure needed for creating the dataset"
+    "# organize into data folder as needed for dataset structure\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# quick test cnn to see if it works"
+    "# quick test cnn to see if it works (using imagedatagenerator)\n"
    ]
   }
  ]
