--- a/Phenophase_Classification/create_dataset.ipynb
+++ b/Phenophase_Classification/create_dataset.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
     "        \n",
     "    return year, month, day\n",
     "\n",
-    "def calc_average_transition_date(str_dates_list):\n",
+    "def calc_average_transition_date(str_dates_list, is_rising):\n",
     "    years = []\n",
     "    doys = []\n",
     "    for string in str_dates_list:\n",
@@ -101,12 +101,12 @@
     "    _, avg_month, avg_day = doy_to_date(avg_doy, avg_year)\n",
     "    date = str(avg_year) + '_' + str(avg_month) + '_' + str(avg_day)\n",
     "\n",
-    "    return {'date':date , 'year':avg_year, 'month':avg_month, 'day':avg_day, 'doy':avg_doy}\n"
+    "    return {'rising':is_rising, 'date':date , 'year':avg_year, 'month':avg_month, 'day':avg_day, 'doy':avg_doy}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
@@ -152,14 +152,12 @@
     "            i += 1\n",
     "            if i==num_falling_transitions: i=0\n",
     "    \n",
-    "    avg_rising = [calc_average_transition_date(transition) for transition in rising]\n",
-    "    avg_falling = [calc_average_transition_date(transition) for transition in falling]\n",
-    "    \n",
+    "    avg_transitions = [calc_average_transition_date(transition, True) for transition in rising]\n",
+    "    avg_transitions.extend([calc_average_transition_date(transition, False) for transition in falling])\n",
     "\n",
     "    transition_date_data = {\n",
     "        'sitename': sitename,\n",
-    "        'rising': avg_rising,\n",
-    "        'falling': avg_falling,\n",
+    "        'transitions': avg_transitions,\n",
     "    }\n",
     "\n",
     "    file_to_save = sitename + '_transition_dates.json'\n",
@@ -170,51 +168,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# method, return true if date1 (date) after date2 (transition date)\n",
-    "def date_is_after(year1, month1, day1, year2, month2, day2):\n",
-    "    if year1 != year2:\n",
-    "        return year1 > year2\n",
-    "    elif month1 != month2:\n",
-    "        return month1 > month2\n",
-    "    elif day1 != day2:\n",
-    "        return day1 > day2\n",
-    "    else:\n",
-    "        return True\n",
-    "\n",
-    "\n",
     "# method, given input of img_file, output boolean indicating if rising or falling\n",
     "def is_rising(filename):\n",
-    "    sitename = ''\n",
-    "    date = ''\n",
-    "    year = 0\n",
-    "    month = 0\n",
-    "    day = 0\n",
+    "    truncated_filename = filename[filename.rfind('/')+1:]\n",
+    "    sitename = truncated_filename[:truncated_filename.find('_')]\n",
+    "    date = truncated_filename[truncated_filename.find('_')+1:-11].replace('_', '-')\n",
+    "    doy, year = date_to_doy(date)\n",
+    "    total_days = 365.2422 * year + doy\n",
     "\n",
-    "    ## ****this is where I load json of transition dates and iterate through it, deciding somehow if it is rising or falling****\n",
+    "    # load json transition dates file\n",
+    "    with open('./phenocam_data/' + sitename + '_transition_dates.json', 'r') as file:\n",
+    "         site_transitions =  json.load(file)['transitions']\n",
     "\n",
+    "    # find closest\n",
+    "    distances = []\n",
+    "    for i in range(len(site_transitions)):\n",
+    "        year_trans = site_transitions[i]['year']\n",
+    "        doy_trans = site_transitions[i]['doy']\n",
+    "        total_days_trans = 365.2422 * year_trans + doy_trans\n",
+    "        distance = total_days - total_days_trans\n",
+    "        distances.append((i, distance))\n",
+    "    \n",
+    "    closest = min(distances, key=lambda x: x[1])\n",
+    "    if site_transitions[closest[0]]['rising']:\n",
+    "        return closest[1] >= 0\n",
+    "    else:\n",
+    "        return closest[1] < 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "pred truth is_right\nTrue False False\nTrue False False\nTrue False False\nTrue False False\nTrue True True\nFalse True False\nTrue True True\nTrue True True\nTrue True True\nTrue True True\nTrue False False\nTrue False False\nTrue False False\nTrue idk False\nTrue False False\nTrue False False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# test cases for is_rising()\n",
+    "test_files = {\"../PhenoCam_v2/images/willowcreek_phenocam_data_20201202041945/phenocamdata/willowcreek/2011/11/willowcreek_2011_11_05_120104.jpg\":False,\n",
+    "        \"../PhenoCam_v2/images/willowcreek_phenocam_data_20201202041945/phenocamdata/willowcreek/2011/11/willowcreek_2012_10_06_120103.jpg\":False,\n",
+    "        \"../PhenoCam_v2/images/willowcreek_phenocam_data_20201202041945/phenocamdata/willowcreek/2011/11/willowcreek_2013_01_07_120102.jpg\":False,\n",
+    "        \"../PhenoCam_v2/images/willowcreek_phenocam_data_20201202041945/phenocamdata/willowcreek/2011/11/willowcreek_2014_12_09_120103.jpg\":False,\n",
+    "        \"../PhenoCam_v2/images/willowcreek_phenocam_data_20201202041945/phenocamdata/willowcreek/2011/11/willowcreek_2012_08_10_120104.jpg\":True,\n",
+    "        \"../PhenoCam_v2/images/willowcreek_phenocam_data_20201202041945/phenocamdata/willowcreek/2011/11/willowcreek_2019_06_11_120104.jpg\":True,\n",
+    "        \"../PhenoCam_v2/images/willowcreek_phenocam_data_20201202041945/phenocamdata/willowcreek/2011/11/willowcreek_2013_07_12_120104.jpg\":True,\n",
+    "        \"../PhenoCam_v2/images/willowcreek_phenocam_data_20201202041945/phenocamdata/willowcreek/2011/11/willowcreek_2012_05_13_120923.jpg\":True,\n",
+    "        \"../PhenoCam_v2/images/willowcreek_phenocam_data_20201202041945/phenocamdata/willowcreek/2011/11/willowcreek_2016_04_05_120104.jpg\":True,\n",
+    "        \"../PhenoCam_v2/images/willowcreek_phenocam_data_20201202041945/phenocamdata/willowcreek/2011/11/willowcreek_2012_04_06_120103.jpg\":True,\n",
+    "        \"../PhenoCam_v2/images/willowcreek_phenocam_data_20201202041945/phenocamdata/willowcreek/2011/11/willowcreek_2013_02_07_120102.jpg\":False,\n",
+    "        \"../PhenoCam_v2/images/willowcreek_phenocam_data_20201202041945/phenocamdata/willowcreek/2011/11/willowcreek_2014_01_09_120103.jpg\":False,\n",
+    "        \"../PhenoCam_v2/images/willowcreek_phenocam_data_20201202041945/phenocamdata/willowcreek/2011/11/willowcreek_2015_11_10_120104.jpg\":False,\n",
+    "        \"../PhenoCam_v2/images/willowcreek_phenocam_data_20201202041945/phenocamdata/willowcreek/2011/11/willowcreek_2011_11_12_120104.jpg\":False,\n",
+    "        \"../PhenoCam_v2/images/willowcreek_phenocam_data_20201202041945/phenocamdata/willowcreek/2011/11/willowcreek_2011_11_13_120923.jpg\":False} # not all exist\n",
     "\n",
+    "print('pred truth is_right')\n",
+    "for test_file in test_files.items():\n",
+    "    print(is_rising(test_file[0]), test_file[1], is_rising(test_file[0])==test_file[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# sort images into \"sorted_images\" folder according to rising or falling\n",
+    "from PIL import Image\n",
     "directory = \"./phenocam_data/\"\n",
     "target_directory = '../PhenoCam_v2/sorted_images/'\n",
     "\n",
     "files_in_directory = os.listdir(directory)\n",
     "filtered_files = [file for file in files_in_directory if file.endswith(\"imgs.json\")]\n",
     "\n",
+    "print(\"Started sorting!\")\n",
     "for file in filtered_files:\n",
-    "    filename = ''\n",
-    "    if is_rising(file):\n",
-    "        pass # save into rising folder, with filename name (not file)\n",
-    "    else:\n",
-    "        pass # save into falling folder, with filename name (not file)"
+    "    with open(directory + file, 'r') as f:\n",
+    "        img_list = json.load(f)['img_file_names']\n",
+    "    for img_filename in img_list:\n",
+    "        filename = img_filename[img_filename.rfind('/')+1:] \n",
+    "        if is_rising(img_filename):\n",
+    "            img = Image.open(img_filename)\n",
+    "            img.save(target_directory + 'rising/' + filename)\n",
+    "        else:\n",
+    "            img = Image.open(img_filename)\n",
+    "            img.save(target_directory + 'falling/' + filename)\n",
+    "    i = 1/0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
