--- a/Phenophase_Classification/process_phenocam_data.ipynb
+++ b/Phenophase_Classification/process_phenocam_data.ipynb
@@ -149,12 +149,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# delete the following remaining sites that I will not be using\n",
-    "remove_these = ['ashbottoms', 'barrocolorado', 'groundhog', 'harvardbarn', 'harvardhemlock', 'hawbeckereddy', 'huyckpreserveny', 'kingmanfarm', 'NEON.D03.JERK.DP1.00033', 'NEON.D05.TREE.DP1.00033', 'ninemileprairie', 'northattleboroma', 'proctor', 'sweetbriar', 'sylvania', 'ugseros', 'uwmfieldsta', 'woodstockvt', 'worcester', 'caryinstitute', 'donanapajarera']\n",
+    "remove_these = ['ashbottoms', 'barrocolorado', 'groundhog', 'harvardbarn', 'harvardhemlock', 'hawbeckereddy', 'huyckpreserveny', 'kingmanfarm', 'NEON.D03.JERK.DP1.00033', 'NEON.D05.TREE.DP1.00033', 'ninemileprairie', 'northattleboroma', 'proctor', 'sweetbriar', 'sylvania', 'ugseros', 'uwmfieldsta', 'woodstockvt', 'worcester', 'caryinstitute', 'donanapajarera', 'NEON.D05.STEI.DP1', 'NEON.D05.UNDE.DP1']\n",
     "\n",
     "directory = \"./phenocam_data/\"\n",
     "files_in_directory = os.listdir(directory)\n",
